--- a/turan.tex
+++ b/turan.tex
@@ -255,7 +255,7 @@ problem and its rich history in \secref{tripods}.
     $n^*=n:n\log n$ \quad $\mathrm{tripods}=n^{1.546}:n^2/e^{\Omega(\log^* n)}$
   }
   \caption{New and previous bounds for $\ex(n,X)$, up to a factor of $\log n$.
-  New results are in dark(er) green.}
+  New near-optimal results are in dark(er) green.}
   % For the new bounds listed as $n$, the lower bound is $\Omega(n)$ and the upper bound is $O(n\log n)$.  For the bounds listed as ``tripods'', the lower bound is $\Omega(n^{1.546})$ and the upper bound is $n^2/e^{\Omega(\log^*n)}$.}
   \tablabel{bigtable}
 \end{table}
@@ -774,7 +774,7 @@ $y_0<y_1$ and $x_0<x_1$.
 
 
 \begin{thm}\thmlabel{nested-ears-david}
-  $\ex(n,\{\nested,\ears,\david\}) \in O(n)$.
+  $\ex'(n,\{\nested,\ears,\david\}) \in O(n)$.
 \end{thm}
 
 \begin{proof}
@@ -910,11 +910,11 @@ $b$.
    This implies that $|S|\le 2n$.  What remains is to account for points 
    of $S$ that are played in multiple rounds.
 
-   Consider the graph $G$ with vertex set $S$ and that contains an
-   edge $uw$ if and only if the $x$-coordinate of $u$ is equal to the
+   Consider the graph $G$ with vertex set $S$ that contains an edge
+   $uw$ if and only if the $x$-coordinate of $u$ is equal to the
    $y$-coordinate of $w$.  We claim that $G$ is 4-colourable.  To prove
-   this, we partition $S$ into two sets $A$ and $B$ and show that each of
-   the graphs $G[A]$ and $G[B]$ induced by $A$ and $B$ is 2-colourable
+   this, we partition $S$ into two sets $A$ and $B$ and show that each
+   of the graphs $G[A]$ and $G[B]$ induced by $A$ and $B$ is 2-colourable
    (in fact, $G[A]$ and $G[B]$ are each forests). Thus, if we colour $A$
    with colours $\{1,2\}$ and $B$ with colours $\{3,4\}$, then we obtain
    a 4-colouring of $G$.
@@ -1201,7 +1201,7 @@ $Q'=\{n/2,\ldots,n\}^2$ on the line $\{(x,y):y=3n/2-x-i+1\}$.
    \centerline{\includegraphics[height=3cm]{figs/helper-18}
    \hspace{2cm}\includegraphics[height=3cm]{figs/lower-bounds-5}}
    We repeatedly take every second point on the diagonal $y=x-1$, i.e.,
-   for each $i\in\{1,\ldots,n\}$, $Q_i=\{(2j,2j-1: j\in\{1,\ldots,\lfloor n/2\rfloor\}\}$.
+   for each $i\in\{1,\ldots,n\}$, $Q_i=\{(2j,2j-1): j\in\{1,\ldots,\lfloor n/2\rfloor\}\}$.
 \end{proof}
 
 \begin{thm}\thmlabel{nested-bat-david}
@@ -1212,7 +1212,7 @@ $Q'=\{n/2,\ldots,n\}^2$ on the line $\{(x,y):y=3n/2-x-i+1\}$.
    \centerline{\includegraphics[height=3cm]{figs/helper-12}
    \hspace{2cm}\includegraphics[height=3cm]{figs/lower-bounds-7}}
    We repeatedly take every second point on the diagonal $y=x-1$, i.e.,
-   for each $i\in\{1,\ldots,n\}$, $Q_i=\{(2j,2j-1: j\in\{1,\ldots,\lfloor n/2\rfloor\}\}$.
+   for each $i\in\{1,\ldots,n\}$, $Q_i=\{(2j,2j-1): j\in\{1,\ldots,\lfloor n/2\rfloor\}\}$.
 \end{proof}
 
 \begin{thm}\thmlabel{bat-nested-ears}
